--- a/arch/arm64/configs/griffin_defconfig
+++ b/arch/arm64/configs/griffin_defconfig
@@ -1228,7 +1228,7 @@ CONFIG_UID_STAT=y
 # CONFIG_SRAM is not set
 CONFIG_QSEECOM=y
 CONFIG_HDCP_QSEECOM=y
-# CONFIG_UID_CPUTIME is not set
+CONFIG_UID_CPUTIME=y
 # CONFIG_USB_EXT_TYPE_C_PERICOM is not set
 # CONFIG_USB_EXT_TYPE_C_TI is not set
 # CONFIG_TI_DRV2667 is not set
@@ -4414,8 +4414,13 @@ CONFIG_FSNOTIFY=y
 CONFIG_DNOTIFY=y
 CONFIG_INOTIFY_USER=y
 # CONFIG_FANOTIFY is not set
-# CONFIG_QUOTA is not set
-# CONFIG_QUOTACTL is not set
+CONFIG_QUOTA=y
+# CONFIG_QUOTA_NETLINK_INTERFACE is not set
+CONFIG_PRINT_QUOTA_WARNING=y
+# CONFIG_QUOTA_DEBUG is not set
+# CONFIG_QFMT_V1 is not set
+# CONFIG_QFMT_V2 is not set
+CONFIG_QUOTACTL=y
 # CONFIG_AUTOFS4_FS is not set
 CONFIG_FUSE_FS=y
 # CONFIG_CUSE is not set
@@ -4729,9 +4734,9 @@ CONFIG_ARCH_HAS_UBSAN_SANITIZE_ALL=y
 # CONFIG_STRICT_DEVMEM is not set
 # CONFIG_PID_IN_CONTEXTIDR is not set
 # CONFIG_ARM64_RANDOMIZE_TEXT_OFFSET is not set
-# CONFIG_FORCE_PAGES is not set
 # CONFIG_FREE_PAGES_RDONLY is not set
-# CONFIG_DEBUG_RODATA is not set
+CONFIG_DEBUG_RODATA=y
+# CONFIG_DEBUG_ALIGN_RODATA is not set
 CONFIG_EARLY_PRINTK=y
 
 #
